--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             }
         </script>
 
-        Introduce tu nombrre <input type="text" id="nombre">
+        Introduce tu nombre <input type="text" id="nombre">
         Introduce tu apellido <input type="text" id="apellido" onchange="mifuncionnombre">
     </main>
 </body>
