--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             function mifuncionnombre() {
                 var nom = document.getElementById("nombre").value;
                 var apellido = document.getElementById("apellido").value;
-                alert ('bienvenido' + nombre + apellido)
+                alert ('bienvenido' + nombre + apellido);
             }
         </script>
 
