--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </script>
 
         Introduce tu nombre <input type="text" id="nombre">
-        Introduce tu apellido <input type="text" id="apellido" onchange="mifuncionnombre">
+        Introduce tu apellido <input type="text" id="apellido" onchange="mifuncionnombre()">
     </main>
 </body>
 </html>
